# backend/src/Api/Extensions/OpenApiServiceExtensions.cs
@@ -36,6 +36,30 @@ internal static class OpenApiServiceExtensions
 
             options.OperationFilter<GlobalResponsesOperationFilter>();
             options.SwaggerGeneratorOptions.XmlCommentEndOfLine = "\n";
+
+            options.AddSecurityDefinition("oauth2", new OpenApiSecurityScheme
+            {
+                Type = SecuritySchemeType.OAuth2,
+                Flows = new OpenApiOAuthFlows
+                {
+                    AuthorizationCode = new OpenApiOAuthFlow
+                    {
+                        AuthorizationUrl = new Uri("https://auth.wsh.no/api/oidc/authorization"),
+                        TokenUrl = new Uri("https://auth.wsh.no/api/oidc/token"),
+                        Scopes = new Dictionary<string, string>
+                        {
+                            ["openid"] = "OpenID Connect",
+                            ["profile"] = "Profile",
+                            ["email"] = "Email",
+                        }
+                    }
+                }
+            });
+
+            options.AddSecurityRequirement(_ => new OpenApiSecurityRequirement
+            {
+                { new OpenApiSecuritySchemeReference("oauth2"), ["openid", "profile", "email"] }
+            });
         });
 
         return services;
