# backend/src/Api/openapi.json
@@ -972,8 +972,27 @@
         },
         "additionalProperties": { }
       }
+    },
+    "securitySchemes": {
+      "oauth2": {
+        "type": "oauth2",
+        "flows": {
+          "authorizationCode": {
+            "authorizationUrl": "https://auth.wsh.no/api/oidc/authorization",
+            "tokenUrl": "https://auth.wsh.no/api/oidc/token",
+            "scopes": {
+              "openid": "OpenID Connect",
+              "profile": "Profile",
+              "email": "Email"
+            }
+          }
+        }
+      }
     }
   },
+  "security": [
+    { }
+  ],
   "tags": [
     {
       "name": "Items"
